@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho

class User {
  + ID: UUID 
  + IsActive: Boolean
  + IsVisible: Boolean
  + Name: String
  + Username: String        ^Unique
  + PasswordHash: String
  + Email: String        ^Unique
  + IsVerified: Boolean
  + PrimaryCurrency: String
  + AvatarPath: String
  --
  + CreatedAt: DateTime
  + UpdatedAt: DateTime
}

class Transaction {
  + ID: UUID
  + Type: String
  + Name: String
  + Date: DateTime
  + MerchantName: String
  + TotalAmount: Decimal
  + Currency: String
  + RecognizedText: Text
  + Description: Text
  + Category: String
  + LocationName: String
  + LocationAddress: String
  + LocationCoordinates: String
  --
  + CreatedAt: DateTime
  + UpdatedAt: DateTime
}

class Image {
  + ID: UUID
  + TransactionID: UUID
  + OriginalImagePath: String
  + ProcessedImagePath: String
  --
  + CreatedAt: DateTime
  + UpdatedAt: DateTime
}

class Folder {
  + ID: UUID
  + Name: String
  + IconPath: String
  --
  + CreatedAt: DateTime
  + UpdatedAt: DateTime
}

class RefreshToken {
  + ID: UUID
  + UserID: UUID
  + Token: String
  + ExpiryDate: DateTime
  + Revoked: Boolean
  + SessionID: UUID
  --
  + CreatedAt: DateTime
  + UpdatedAt: DateTime
}

class AccessToken {
  + ID: UUID
  + UserID: UUID
  + Token: String
  + ExpiryDate: DateTime
  + SessionID: UUID
  --
  + CreatedAt: DateTime
  + UpdatedAt: DateTime
}

class Session {
  + ID: UUID
  + UserID: UUID
  + DeviceName: String
  + DeviceType: String
  + DeviceIP: String
  + LastActivity: DateTime
  + Active: Boolean
  --
  + CreatedAt: DateTime
  + UpdatedAt: DateTime
}

class FolderTransaction {
  + FolderID: UUID
  + TransactionID: UUID
  --
  + CreatedAt: DateTime
  + UpdatedAt: DateTime
}

class Collaborator {
  + ID: UUID
  + FolderID: UUID
  + UserID: UUID
  + Role: String
  --
  + CreatedAt: DateTime
  + UpdatedAt: DateTime
}

User "1" -- "many" Folder : "может иметь доступ к"
User "1" -- "many" Transaction : "владеет"
User "1" -- "many" Session : "имеет"
User "1" -- "many" RefreshToken : "имеет"
User "1" -- "many" AccessToken : "имеет"

Folder "1" -- "many" FolderTransaction
Transaction "1" -- "many" FolderTransaction

Transaction "1" -- "many" Image : "хранит"

Folder "1" -- "many" Collaborator
Collaborator "many" -- "1" User : "имеет роль в"

Session "1" -- "many" RefreshToken : "содержит"
Session "1" -- "many" AccessToken : "содержит"
@enduml
